--- a/style.css
+++ b/style.css
@@ -2,12 +2,15 @@
 *{
 }
 
+
+
 /*--- Main Header ---*/
 .mainheader{
-    /* background-color: #e2e5e5;
+    
+    background-color: #e2e5e5;
     padding: 15px;
     padding-left: 20px;
-    padding-right: 20px; */
+    padding-right: 20px;
 
     padding: 20px 40px;
     margin-bottom: 10px;
@@ -25,6 +28,11 @@ h1{
     text-align: left;
    
 }
+
+.company-name{
+    color: black; 
+    text-align: left;  
+}
 h2{
     font-size: 40px;
     line-height: 1.5;
@@ -36,8 +44,20 @@ h3{
     font-size: 20px;
     text-align: center;
 }
+
+.related-topics-heading{
+    color: black; 
+}
+
 p{
+     
     font-size: 18px;
+}
+
+.about-company{
+    color: black; 
+     
+    text-align: left;  
 }
 
 .aside{
@@ -70,20 +90,13 @@ p{
 }
 
 
-/*--- Link Styling links (LVHA) ---*/
-a:link{
-    color: #0e54eb;
+ul{
+    color: black;
+    text-align: left;  
 }
-a:visited{
-    color: #0e54eb;
+
+.developer-contact-info{
+    color: white; 
+    text-align: center;
 }
-a:hover{
-    font-size: 40px;
-    color: blue;
-    font-weight: normal;
-    text-decoration: underline orangered;
-}
-a:active{
-    background-color: greenyellow;
-    
-}
+
