--- a/css/footer.css
+++ b/css/footer.css
@@ -10,6 +10,11 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
+#footer{
+  position: relative; 
+  top: 25px;  
+}
+
 #footer-logo{
   height: 40px; 
   position: relative; 
